# E-Symbolic-Railway-Dynamics-Formulation

./: .gitignore  CMakeLists.txt  README.md
eqs2latex/: CMakeLists.txt  README  README.md
eqs2latex/headers/: tex.h
eqs2latex/src/: main.cpp  tex.cpp
eqs2latex/test/: README.md  test.cpp
